# poc-custom-wit-interface

./: README.md  wadm.yaml
actors/api/: Cargo.toml  wasmcloud.toml
actors/api/src/: lib.rs
actors/api/wit/: api.wit
actors/model/: build.rs
actors/model/src/: lib.rs
actors/model/wit/: deps.toml  world.wit
actors/postprocessor/: Cargo.toml  wasmcloud.toml
actors/postprocessor/src/: lib.rs
actors/postprocessor/wit/: postprocessor.wit
actors/preprocessor/: Cargo.toml
actors/preprocessor/src/: lib.rs
actors/stateful-actor/: README.md
actors/stateful-actor/src/: lib.rs
actors/stateful-actor/wit/: world.wit
components/api/: README.md  wasmcloud.toml
components/api/keys/: api_module.nk  finnfalter_account.nk
components/api/src/: errors.rs  http_handler.rs  lib.rs  myhandler.rs  nats_handler.rs  streams.rs
components/api/wit/: api.wit  deps.toml
components/imagenetpostprocessor/: Cargo.toml  wasmcloud.toml
components/imagenetpostprocessor/src/: lib.rs
components/imagenetpostprocessor/wit/: postprocessor.wit
components/imagenetpreprocessor/: Cargo.toml  wasmcloud.toml
components/imagenetpreprocessor/src/: lib.rs  processor.rs
components/imagenetpreprocessor/wit/: preprocessor.wit
components/imagenetpreprocrgb/: Cargo.toml  wasmcloud.toml
components/imagenetpreprocrgb/src/: lib.rs  processor.rs
components/imagenetpreprocrgb/wit/: deps.toml
components/model/: Cargo.toml  README.md
components/model/keys/: model_module.nk  stateful_module.nk
providers/: Cargo.toml  cargo-expand-compiles.txt  cargo-expand-non-compiling.txt
providers/fake-provider/: Cargo.toml  wamli-ai-model.wit
providers/fake-provider/src/: lib.rs
providers/fake-provider/wit/: deps.toml  ml-provider.wit  wamli-fake.wit  wamli-mlprovider.wit
providers/fakeml/: Cargo.toml  README.md  wasmcloud.toml
providers/fakeml/src/: config.rs  lib.rs  main.rs  provider.rs
providers/fakeml/wit/: deps.toml  wamli-mlprovider.wit
providers/inference/: Cargo.toml  README.md  wasmcloud.toml
providers/inference/src/: config.rs  data_loader.rs  engine.rs  inference.rs  lib.rs  main.rs  provider.rs
providers/inference/src/data_loader/: model_loader.rs  oci_image_loader.rs
providers/inference/src/engine/: tflite.rs  tract.rs
providers/inference/wit/: deps.toml  wamli-mlprovider.wit
scripts/: build.sh  cleanup.sh  configure.sh  kill-hots.sh  launch.sh  reset-nats.sh  start.sh  stop.sh
stateful-actor/: Cargo.toml  wasmcloud.toml
stateful-actor/keys/: finnfalter_account.nk
stateful-actor/src/: lib.rs
stateful-actor/wit/: world.wit
