[workspace.package]
authors = ["Christoph Brewing <christoph.brewing@wamli.dev>"]
categories = ["wasm"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/wasmCloud/wasmCloud"

[profile.release]
strip = true
opt-level = "z"
lto = true

[workspace]
members = [
    "fake-provider",
]
resolver = "2"

[workspace.dependencies]
redis = { version = "0.23", default-features = false }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
wasmcloud-provider-wit-bindgen = { path = "../../../wasmcloud/wasmCloud/crates/provider-wit-bindgen", default-features = false }
wasmtime = { version = "17.0.0", workspace = false, features = ["async", "component-model"] }