[package]
name = "wamli-fake-provider"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
redis = { workspace = true, features = [
    "tokio-comp",
    "aio",
    "connection-manager",
    "rustls",
] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
wasmcloud-provider-wit-bindgen = { workspace = true, features = [ "otel" ] }
wasmtime = { workspace = true, features = ["addr2line", "async", "cache", "component-model", "coredump", "cranelift", "parallel-compilation", "pooling-allocator" ] }
