[package]
name = "inference"
version = "0.1.0"

authors = ["Christoph Brewing <christoph.brewing@wamli.dev>"]
categories = ["wasm"]
edition = "2021"
license = "Apache-2.0"
resolver = "2"

[dependencies]
serde = "1.0"
tar = "0.4.41"
log = "0.4.20"
flate2 = "1.0.30"
anyhow = "1.0.82"
thiserror = "1.0"
serde_json = "1.0"
async-trait = "0.1"
tracing-log = "0.2.0"
async-nats = "0.33.0"
tract-data = "0.21"
tract-onnx = "0.21"
tract-linalg = "0.21"
tract-tensorflow = "0.21"
wit-bindgen-wrpc = "0.3.7"
oci-distribution = "0.11.0"
wasmcloud-provider-sdk = "0.5.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", default-features = false }