[package]
name = "inference"
version = "0.1.0"

authors = ["Christoph Brewing <christoph.brewing@wamli.dev>"]
categories = ["wasm"]
edition = "2021"
license = "Apache-2.0"
resolver = "2"

[features]
default = []
tflite = ["dep:tflite"]
edgetpu = ["tflite", "dep:edgetpu"]

[dependencies]
serde = "1.0"
tar = "0.4.41"
log = "0.4.20"
ndarray = "0.15"
flate2 = "1.0.30"
anyhow = "1.0.82"
thiserror = "1.0"
byteorder = "1.5"
serde_json = "1.0"
async-trait = "0.1"
tracing-log = "0.2.0"
async-nats = "0.33.0"
tract-data = "0.21"
tract-onnx = "0.21"
tract-linalg = "0.21"
tract-tensorflow = "0.21"
wit-bindgen-wrpc = "0.6.4"
oci-distribution = "0.11.0"
wasmcloud-provider-sdk = "0.8.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", default-features = false }

# optional features
edgetpu = { git = "https://github.com/Finfalter/edgetpu-rs", rev = "d86f59c", optional=true }
tflite = { git = "https://github.com/Finfalter/tflite-rs", rev = "5c11a15", optional=true, submodules=true }

[lib]
#name = "wasmcloud_provider_mlinference"
name = "inference"
path = "src/lib.rs"

[[bin]]
name = "inference"
path = "bin/main.rs"